[package]
name = "ckcc"
version = "0.1.0"
edition = "2021"
authors = ["Coinkite Inc. <support@coinkite.com>"]
description = "Coldcard USB protocol library and CLI — communicate with your Coldcard hardware wallet"
license = "MIT"
repository = "https://github.com/portlandhodl/ckcc-protocol"
readme = "README.md"
keywords = ["coldcard", "bitcoin", "hardware-wallet", "usb", "hid"]
categories = ["cryptography", "command-line-utilities", "hardware-support"]

[lib]
name = "ckcc"
path = "src/lib.rs"

[[bin]]
name = "ckcc"
path = "src/main.rs"

[dependencies]
# HID USB communication
hidapi = "2.6"

# CLI framework
clap = { version = "4", features = ["derive"] }

# Cryptography: ECDSA / secp256k1
k256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
elliptic-curve = { version = "0.13", features = ["sec1"] }

# AES-CTR encryption
aes = "0.8"
ctr = "0.9"
cipher = "0.4"

# Hashing
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["hmac"] }

# Serialization helpers
hex = "0.4"
base64 = "0.22"
bs58 = "0.5"

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Regex (for electrum conversion)
regex = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Random number generation
rand = "0.8"

# Big integer math (for pubkey decompression)
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"

# Date/time (for backup filenames)
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
